bpo-35455: Fix thread_time for Solaris OS